[tool.poetry]
name = "repl_python3_Die-hollischen-Hohlen"
version = "0.1.0"
description = ""
authors = ["GeduldigeBirne <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
colorama = "^0.4.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
